# python-changelog-detector

./: .editorconfig  .gitignore  README.md  commit_log.txt  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
.github/workflows/: auto-commit.yml  automate.yml
src/py/: main.py  scrape.py  tweet.py
src/ts/: config.ts  index.ts  postToRelays.ts  readTextFile.ts
text/changelog_text/: 240902173625_changelog.txt  240902183151_changelog.txt  240904082928 (UTC+0)_changelog.txt  240907031319 (UTC+0)_changelog.txt  240910031423 (UTC+0)_changelog.txt  240913031405 (UTC+0)_changelog.txt  240914031345 (UTC+0)_changelog.txt  240915031827 (UTC+0)_changelog.txt  240917031422 (UTC+0)_changelog.txt  240920031532 (UTC+0)_changelog.txt  240922031901 (UTC+0)_changelog.txt  240924031818 (UTC+0)_changelog.txt  240925032021 (UTC+0)_changelog.txt  240926031830 (UTC+0)_changelog.txt  240927031819 (UTC+0)_changelog.txt  240929032154 (UTC+0)_changelog.txt  240930032321 (UTC+0)_changelog.txt  241001032655 (UTC+0)_changelog.txt  241003031838 (UTC+0)_changelog.txt  241004031821 (UTC+0)_changelog.txt  241005031634 (UTC+0)_changelog.txt  241007032038 (UTC+0)_changelog.txt  241008032028 (UTC+0)_changelog.txt  241009031827 (UTC+0)_changelog.txt  241010031818 (UTC+0)_changelog.txt  241011031721 (UTC+0)_changelog.txt  241012031556 (UTC+0)_changelog.txt  241013032032 (UTC+0)_changelog.txt  241014032134 (UTC+0)_changelog.txt  241015031935 (UTC+0)_changelog.txt  241016032043 (UTC+0)_changelog.txt  241017031850 (UTC+0)_changelog.txt  241019031729 (UTC+0)_changelog.txt  (+51 more)
(+1 files in other folders)
