[tool.poetry]
name = "python-changelog-detector"
version = "0.1.0"
description = ""
authors = ["hikaelis <sileakih@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
flake8 = "^7.1.1"
black = "^24.8.0"
isort = "^5.13.2"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 127

[tool.isort]
profile = "black"